--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <script src="https://cdn.bootcss.com/three.js/91/three.js"></script>
+    <div id="app">
+        {{ message }}
+    </div>
     <script src="./index.js"></script>
 </body>
 
